Add test coverage of "no results" case
Signed-off-by: Daniel Widdis <widdis@gmail.com>